2012-09-21 Simon Flöery <chimaira@users.sf.net>
	* making --enable-gtk3 default for configure
	* replaced three deprecated GTK calls

2012-09-19 Simon Floery <chimaira@users.sf.net>
	* added zh_CN, da_DK, kk_KZ and sv locale (thanks to Athurg Gooth, Joakim  Seeberg, Baurzhan Muftakhidinov and Daniel Nylander)
	* added plenty of GTK_WIDGET macro casts to get rid of some compilation warnings

2012-09-18 pcmanx
	* removed libglade dependancies
	* Correct installation paths of icons
 	* Port to gtk+ 3 (--enable-gtk3 configure option)
	* added zh_TW locale

##############################################
# 2009-02-08 galculator 1.3.4 released       #
##############################################

2009-02-08 Simon Floery <chimaira@users.sf.net>
	* src/display.c: fixed display_result_toggle_sign for EE (closes sf.net
		#2570283).
	* pixmaps: renamed galculator_48x48.png to galculator.png (closes sf.net
		#2496411, thanks to Marco for reporting)
	* src/flex_parser.l: parser allows both '.' and ',' as decimal point
		(closes Debian BTS #513232, thanks to Mario for reporting)
	* applied 01_hildon_interface.patch from ubuntu (closes sf.net #1831261,
		thanks to Marco for reporting)
	* pixmaps: added galculator.xpm

##############################################
# 2009-01-11 galculator 1.3.3 released       #
##############################################

2009-01-11 Simon Floery <chimaira@users.sf.net>
	* galculator.desktop.in: new version (closes sf.net #2496411, 
		thanks to Marco)
	* src/general_functions.c: workaround for numerical issues (closes sf.net
		#2496461, Debian BTS #459456)
	* src/callbacks.c: main_window resizes to minimum after changing views
		(thanks to Christian for reporting)

##############################################
# 2009-01-06 galculator 1.3.2 released       #
##############################################

2009-01-06 Simon Floery <chimaira@users.sf.net>
	* galculator.desktop.in: use galculator icon (patch by Omair, thanks; fixes